remove toolchains plugin, add system.properties